Bug 155756 - UI Properties sidebar not displaying height over 100 and can't modify field over 100
Summary: UI Properties sidebar not displaying height over 100 and can't modify field o...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.5.3.2 release
Hardware: All Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.2.0 target:7.6.3 target:7.5.8
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Properties-PositionAndSize
  Show dependency treegraph
 
Reported: 2023-06-09 13:16 UTC by Ralph Williamson
Modified: 2023-10-05 19:19 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Object height discrepancy between dialog and sidebar (29.03 KB, image/jpeg)
2023-06-09 13:16 UTC, Ralph Williamson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Williamson 2023-06-09 13:16:25 UTC
Created attachment 187810 [details]
Object height discrepancy between dialog and sidebar

Properties sidebar seems to max out the height at 100.00. Scale is set to 1:16. I've tried 1:20 scale and it is the same issue.
Dialog does display properly and does allow modification over 100. This is a good workaround.

Steps to reproduce:
1) Open Draw using US Letter size page, inches units.
2) Draw a tall rectangle most of the height of the page.
3) Set scale to 1:16. Note "Height" of 100.00" in Properties tray.
5) Try to enter 105.00" and enter. It will ignore that and go back to 100.00".
4) Open "Position and Size" dialog and note the true height of the rectangle object. It allows modification to 105.00" here.
Comment 1 Adam664 2023-06-10 15:40:00 UTC
Confirmed using

Version: 7.5.2.2 (X86_64)
Build ID: 50(Build:2)
CPU threads: 1; OS: Linux 6.3; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Version: 7.7.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5a2c6f4df7149f8c1f543f120fe19bd66abfc189
CPU threads: 1; OS: Linux 6.3; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Seems like the Properties tray is using percentages, but is displaying the height and width as inches.
Comment 2 Chris 2023-06-20 14:47:01 UTC
Can confirm this.  Doesn't matter what scale is used.  It cannot handle anything that is over 100.  I cannot use this program for my needs because of this bug and am going to uninstall it.
Comment 3 Ralph Williamson 2023-06-20 15:04:02 UTC
(In reply to Chris from comment #2)
> Can confirm this.  Doesn't matter what scale is used.  It cannot handle
> anything that is over 100.  I cannot use this program for my needs because
> of this bug and am going to uninstall it.

Chris,
If it helps FYI, this is not the only way to enter new size. You can simply double-click on the dimensions at the bottom of the window and a dialog appears that allows you to enter the new size/position. It's not really that big of an issue for me :-)
Best Regards,
Ralph
Comment 4 Adam664 2023-07-08 17:12:55 UTC
Bibisected using bibisect-64-7.5 with the following results:

commit de9ff26f26dae9b77b0505c63f8893d41bba50ae
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Sat Dec 3 01:13:03 2022 +0100

    source 8d17ad0bb36b5c330e839fdd7517b37fa72002ae
    
    source 8d17ad0bb36b5c330e839fdd7517b37fa72002ae

 instdir/program/libsvxlo.so | Bin 5425496 -> 5425496 bytes
 instdir/program/setuprc     |   2 +-
 instdir/program/versionrc   |   2 +-
 3 files changed, 2 insertions(+), 2 deletions(-)

Adding Cc. to <caolanm@redhat.com>
Comment 5 Adam664 2023-07-08 17:16:14 UTC
Cc: to <caolan.mcnamara@collabora.com> instead of <caolanm@redhat.com>
Comment 6 Commit Notification 2023-10-03 19:02:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e47c1737d6f1365aa640f1960fb0c9892fde6d77

tdf#155756 sidebar properties not displaying height over 100

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2023-10-03 19:19:25 UTC
works now in trunk I believe, backport to 7-6 in gerrit
Comment 8 Commit Notification 2023-10-05 09:27:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/1e6c139a92d575b986fae25275411a74cc7382e7

tdf#155756 sidebar properties not displaying height over 100

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-10-05 19:19:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/e181518492a69ec853e15813b362bf245ac2fad6

tdf#155756 sidebar properties not displaying height over 100

It will be available in 7.5.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.